# TheForgeCMakeTemplate

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
resources/Fonts/: README.md
src/: AsteroidSim.cpp  AsteroidSim.h  CMakeLists.txt  README.md  Random.h  TextureGen.cpp  main.cpp
